force-app/main/default/objects/Airline_Trip_Emissions__c/Airline_Trip_Emissions__c.object-meta.xml
<CustomObject>
    <description>Stores the flight carbon emissions data for an airline trip involving one or more legs.</description>
    <label>Airline Trip Emissions</label>
    <nameField>
        <displayFormat>ATE-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airline Trip Emissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>