force-app/main/default/objects/Airline_Trip_Emissions__c/fields/CO2e_g__c.field-meta.xml
<CustomField>
    <fullName>CO2e_g__c</fullName>
    <description>Carbon dioxide equivalent (CO2e) in grams (g).</description>
    <label>CO2e g</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>