force-app/main/default/objects/Airline_Trip_Emissions__c/fields/Distance_Unit__c.field-meta.xml
<CustomField>
    <fullName>Distance_Unit__c</fullName>
    <description>To determine if total flight distance will be calculated in miles (mi) or kilometers (km).</description>
    <label>Distance Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mi</fullName>
                <default>true</default>
                <label>mi</label>
            </value>
            <value>
                <fullName>km</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>