force-app/main/default/objects/Airline_Trip_Emissions__c/fields/Flight_Distance__c.field-meta.xml
<CustomField>
    <fullName>Flight_Distance__c</fullName>
    <description>Distance in miles (mi) or kilometers (km), depending on the distance unit selected.</description>
    <label>Flight Distance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>