force-app/main/default/objects/Airline_Trip_Emissions__c/fields/Layover_Airport__c.field-meta.xml
<CustomField>
    <fullName>Layover_Airport__c</fullName>
    <description>Allows user to enter the IATA airport code of a layover airport if the trip is NOT marked as non-stop.</description>
    <label>Layover Airport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IATA_Airport_Codes</valueSetName>
    </valueSet>
</CustomField>