force-app/main/default/objects/Airline_Trip_Emissions__c/fields/Non_Stop_Flight__c.field-meta.xml
<CustomField>
    <fullName>Non_Stop_Flight__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, indicates the flight is direct with no intermittent stops at other airports.</description>
    <label>Non-Stop Flight</label>
    <type>Checkbox</type>
</CustomField>