force-app/main/default/objects/Airline_Trip_Emissions__c/fields/Origination_Airport__c.field-meta.xml
<CustomField>
    <fullName>Origination_Airport__c</fullName>
    <description>Contains the 3-letter airport code of the originatin (first departure) airport.</description>
    <label>Origination Airport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IATA_Airport_Codes</valueSetName>
    </valueSet>
</CustomField>