force-app/main/default/objects/Airline_Trip_Emissions__c/fields/Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_Time__c</fullName>
    <description>Date and time the Carbon Interface was run.</description>
    <label>Request Date/Time</label>
    <type>DateTime</type>
</CustomField>