force-app/main/default/objects/Airline_Trip_Emissions__c/fields/Round_Trip__c.field-meta.xml
<CustomField>
    <fullName>Round_Trip__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the journey is round trip. If unchecked, the flight is one-way.</description>
    <label>Round Trip</label>
    <type>Checkbox</type>
</CustomField>