force-app/main/default/objects/Airline_Trip_Emissions__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Holds the API transaction Id returned in the response body. This id (or key) can be used in a separate API call to pull the emission data in the original response body.</description>
    <label>Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>